--- a/pom.xml
+++ b/pom.xml
@@ -34,18 +34,26 @@
         <artifactId>jersey-server</artifactId>
         <version>1.19</version>
     </dependency>
-    <dependency>
-        <groupId>com.sun.jersey</groupId>
-        <artifactId>jersey-core</artifactId>
-        <version>1.19</version>
-    </dependency>
-    </dependencies>
 
+    </dependencies>
     <packaging>
         war
     </packaging>
     <build>
         <finalName>currency</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/manager/text</url>
+                    <username>manager-script</username>
+                    <password>script</password>
+                </configuration>
+            </plugin>
+
+        </plugins>
     </build>
 
 
