--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,15 @@
         <welcome-file>default.jsp</welcome-file>
     </welcome-file-list>
 
+    <filter>
+        <filter-name>filterLogin</filter-name>
+        <filter-class>com.filter.filterLogin</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>filterLogin</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <servlet>
         <servlet-name>Jersey Web Application</servlet-name>
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
